--- a/MODEN-Full-Modern-Desert/package.json
+++ b/MODEN-Full-Modern-Desert/package.json
@@ -13,8 +13,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "framer-motion": "11.2.6",
-    "lucide-react": "0.451.0",
-    "clsx": "2.1.1"
+    "clsx": "2.1.1",
+    "lucide-react": "0.468.0",
+    "next-themes": "^0.3.0"
+
+
   },
   "devDependencies": {
     "typescript": "5.5.4",
